--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <header>
-        <h1>🏆 Regional/State Level Cross Country Championship Scoring and Statistics System 🏃‍♂️</h1>
-        <p>Age-Category Based Web Application</p>
+        <h1>🏆 Cross-Country Championship Daro District 2025 Scoring and Statistics System 🏃‍♂️</h1>
+        <p>25 November 2025 / SK Kg Penibong</p>
         <button id="logout-btn" onclick="handleLogout()" style="display: none; background-color: #ffc107; color: #333; padding: 5px 10px;">
             Log Keluar
         </button>
@@ -105,3 +105,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
