--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 </head>
 <body>
     <header>
-        <h1>🏆 Cross-Country Championship Daro District 2025 Scoring and Statistics System 🏃‍♂️</h1>
-        <p>25 November 2025 / SK Kg Penibong</p>
+        <h1>🏆 Daro District Schools Sports Council's Development and Special Education Cross-Country Championship🏃‍♂️</h1>
+        <p> Scoring and Statistic System</p>
+        <p>25 November 2025 / Joint Program by the Schools of Tanjung Sirik Zone Cluster/p>
         <button id="logout-btn" onclick="handleLogout()" style="display: none; background-color: #ffc107; color: #333; padding: 5px 10px;">
             Log Keluar
         </button>
@@ -105,4 +106,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
