--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <header>
-        <h1>🏆 Daro District Schools Sports Council's Development and Special Education Cross-Country Championship🏃‍♂️</h1>
-        <p> Scoring and Statistic System</p>
-        <p>25 November 2025 / Joint Program by the Schools of Tanjung Sirik Zone Cluster/p>
+        <h1>🏆 MSSD Daro 2025: Development & Special Education Cross-Country Run🏃‍♂️</h1>
+        <p> Scoring and Statistics System</p>
+        <p>25 November 2025 / Joint Program by the Schools of Tanjung Sirik Zone Cluster</p>
         <button id="logout-btn" onclick="handleLogout()" style="display: none; background-color: #ffc107; color: #333; padding: 5px 10px;">
             Log Keluar
         </button>
@@ -100,11 +100,12 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Aplikasi Kejohanan Merentas Desa</p>
+        <p>&copy; 2025 Aplikasi Kejohanan Merentas Desa / Copyright © BayuUtara. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
