--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <header>
-        <h1>🏆 MSSD Daro 2025: Development & Special Education Cross-Country Run🏃‍♂️</h1>
-        <p> Scoring and Statistics System</p>
-        <p>25 November 2025 / Joint Program by the Schools of Tanjung Sirik Zone Cluster</p>
+        <h1>🏆 KEJOHANAN MERENTAS DESA PENDIDIKAN KHAS (KMDPK)🏃‍♂️</h1>
+        <p> Keputusan dan Statistik</p>
+        <p>Peringkat Negeri Sarawak 2026</p>
         <button id="logout-btn" onclick="handleLogout()" style="display: none; background-color: #ffc107; color: #333; padding: 5px 10px;">
             Log Keluar
         </button>
@@ -106,6 +106,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
