--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
 </head>
 <body>
-    <header>
+<header>
+    <div class="header-content">
         <h1>🏆 KEJOHANAN MERENTAS DESA PENDIDIKAN KHAS (KMDPK) 🏃‍♂️</h1>
-        <p>Sistem Keputusan & Statistik Rasmi</p>
-        <p>Peringkat Negeri Sarawak 2026</p>
-        <button id="logout-btn" style="display: none;" class="btn-warning">
-            Log Keluar
-        </button>
-    </header>
+        <p>Sistem Keputusan & Statistik Rasmi | Peringkat Negeri Sarawak 2026</p>
+    </div>
+
+    <div class="header-actions">
+        <button id="logout-btn">Log Keluar</button>
+    </div>
+</header>
 
     <div id="login-container" class="container">
         <h2>Akses Urus Setia</h2>
@@ -117,3 +119,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
