--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 </head>
 <body>
 <header>
-    <div class="header-content">
+    <div class="header-left">
         <h1>🏆 KEJOHANAN MERENTAS DESA PENDIDIKAN KHAS (KMDPK) 🏃‍♂️</h1>
         <p>Sistem Keputusan & Statistik Rasmi | Peringkat Negeri Sarawak 2026</p>
     </div>
-
-    <div class="header-actions">
+    <div class="header-right">
         <button id="logout-btn">Log Keluar</button>
     </div>
 </header>
@@ -119,4 +118,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
