--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 </head>
 <body>
 <header>
-    <div class="header-left">
+    <div class="header-center">
         <h1>🏆 KEJOHANAN MERENTAS DESA PENDIDIKAN KHAS (KMDPK) 🏃‍♂️</h1>
         <p>Sistem Keputusan & Statistik Rasmi | Peringkat Negeri Sarawak 2026</p>
     </div>
+
     <div class="header-right">
-        <button id="logout-btn">Log Keluar</button>
+        <button id="logout-btn" onclick="handleLogout()">Log Keluar</button>
     </div>
 </header>
 
@@ -118,5 +119,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
