--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>
         <div class="header-center">
-            <h1>🏆 KEJOHANAN MERENTAS DESA PENDIDIKAN KHAS (KMDPK) 🏃‍♂️</h1>
+            <h1>🏆 KEJOHANAN MERENTAS DESA PENDIDIKAN KHAS (KMDPK)</h1>
             <p>Sistem Keputusan & Statistik Rasmi | Peringkat Negeri Sarawak 2026</p>
         </div>
         <div class="header-right">
@@ -178,6 +178,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
